Modernized: Replaced Collections.emptyList() with List.of() and deprecated singletonList(T) and singletonSet(T)